crates/fastc/tests/errors/undefined_name.fc
// Undefined name test case
fn main() -> i32 {
    return undefined_variable;
}
